--- a/style.css
+++ b/style.css
@@ -1,239 +1,234 @@
-*{
-    margin: 0;
-    padding: 0;
-
-
+* {
+	margin: 0;
+	padding: 0;
 }
-.main{
-    width: 100%;
-    background: linear-gradient(to top , rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 109vh;
-
+.main {
+	width: 100%;
+	background: linear-gradient(
+			to top,
+			rgba(0, 0, 0, 0.5) 50%,
+			rgba(0, 0, 0, 0.5) 50%
+		),
+		url(/images/1.jpg);
+	background-position: center;
+	background-size: cover;
+	height: 109vh;
 }
-.navbar{
-    width: 1200px;
-    height: 75px;
-    max-width: auto;
+.navbar {
+	width: 1200px;
+	height: 75px;
+	max-width: auto;
 }
-.icon{
-    width: 200px;
-    float: left;
-    height: 70px;
+.icon {
+	width: 200px;
+	float: left;
+	height: 70px;
 }
-.logo{
-    color: #ff7200;
-    font-size: 35px;
-    font-family: Arial;
-    padding-left: 20px;
-    float: left;
-    padding-top: 10px;
+.logo {
+	color: #ff7200;
+	font-size: 35px;
+	font-family: Arial;
+	padding-left: 20px;
+	float: left;
+	padding-top: 10px;
 }
-.logo :hover{
-    color: #ffffff;
+.logo :hover {
+	color: #ffffff;
 }
-.menu{
-     width: 400px;
-     float: left;
-     height: 70px;
+.menu {
+	width: 400px;
+	float: left;
+	height: 70px;
 }
-ul{
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-ul li{
-    list-style: none;
-    margin-left: 62px;
-    margin-top: 27px;
-    font-size: 14px;
+ul {
+	float: left;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-ul li a{
-    text-decoration: none;
-    color: #ffffff;
-    font-family: Arial;
-    font-weight: bold;
-    transition: 0.4s ease-in-out;
-
+ul li {
+	list-style: none;
+	margin-left: 62px;
+	margin-top: 27px;
+	font-size: 14px;
 }
 
-ul li a:hover{
-    color: #ff7200;
-    
+ul li a {
+	text-decoration: none;
+	color: #ffffff;
+	font-family: Arial;
+	font-weight: bold;
+	transition: 0.4s ease-in-out;
 }
-.search{
-    width: 330px;
-    float: left;
-    margin-left: 25px;
-}
-.srch{
-    font-family: 'Times New Roman';
-    width: 200px;
-    height: 40px;
-    background: transparent;
-    border: 1px solid #ff7200;
-    margin-top: 13px;
-    color: #fff;
-    border-right: none;
-    font-size: 16px;
-    float: left;
-    padding: 10px;
-    border-bottom-left-radius: 55px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 55px;
-}
-.btn{
-    
-    width: 100px;
-    height: 40px;
-    background: #ff7200;
-    border: 2px solid #ff7200;
-    margin-top: 13px;
-    color: #fff;
-    font-size: 15px;
-    border-bottom-left-radius: 55px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 55px;
-    border-bottom-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-.btn:focus{
-    outline: none;
-}
-.srch:focus{
-    outline: none;
-}
-.content{
-    width: 1150px;
-    font-family:Verdana ;
-    height: auto;
-    margin: auto;
-    color: #fff;
-}
-    
-.content h2{
-    margin-right: 90%;
-}
-.content .par{
-    color: #ffffff;
-    padding-left: 20px;
-    padding-bottom: 25px;
-    font-family: Arial;
-    letter-spacing: 1.2px;
-    line-height: 20px;
-}
-.content .cn{
-    width: 160px;
-    height: 40px;
-    background: #ff7200;
-    border: none;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    border-bottom-left-radius: 55px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 55px;
-    border-bottom-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    font-size: 18px;
-    transition: .4s ease;
-    
-}
-.content .cn a{
-    text-decoration: none;
-    color: #fff;
-    transition: .3s ease;
-}
-.content .cn a:hover{
-        color: #000000;
-        
-}
-.content span{
-    color: #ff7200;
-    font-size: 30px;
-}
-.form{
-    width: 250px;
-    height: 380px;
-    background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
-    position: absolute;
-    top: 150px;
-    left: 870px;
-    border-radius: 10px;
-    padding: 25px;
 
+ul li a:hover {
+	color: #ff7200;
 }
-.form h2{
-    width: 220px;
-    font-family: sans-serif;
-    text-align: center;
-    color: #ff7200;
-    font-size: 18px;
-    background-color: #fff;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 8px;
+.search {
+	width: 330px;
+	float: left;
+	margin-left: 25px;
 }
-.form input{
-    width: 240px;
-    height: 35px;
-    background: transparent;
-    border-bottom: 1px solid #ff7200;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    color: #fff;
-    font-size: 15px;
-    letter-spacing: 1px;
-    margin-top: 30px;
-    font-family: sans-serif;
+.srch {
+	font-family: "Times New Roman";
+	width: 200px;
+	height: 40px;
+	background: transparent;
+	border: 1px solid #ff7200;
+	margin-top: 13px;
+	color: #fff;
+	border-right: none;
+	font-size: 16px;
+	float: left;
+	padding: 10px;
+	border-bottom-left-radius: 55px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 55px;
 }
-::placeholder{
-    color: #fff;
-    font-family: Arial;
+.btn {
+	width: 100px;
+	height: 40px;
+	background: #ff7200;
+	border: 2px solid #ff7200;
+	margin-top: 13px;
+	color: #fff;
+	font-size: 15px;
+	border-bottom-left-radius: 55px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 55px;
+	border-bottom-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+.btn:focus {
+	outline: none;
+}
+.srch:focus {
+	outline: none;
+}
+.content {
+	width: 1150px;
+	font-family: Verdana;
+	height: auto;
+	margin: auto;
+	color: #fff;
+}
 
-
+.content h2 {
+	margin-right: 90%;
 }
-.btnn{
-    width: 240px;
-    height: 40px;
-    background: #ff7200;
-    border: none;
-    margin-top: 30px;
-    font-size: 18px;
-    border: radius 10px; 
-    cursor: pointer;
-    color: #fff;
-    transition: 0.4s ease;
+.content .par {
+	color: #ffffff;
+	padding-left: 20px;
+	padding-bottom: 25px;
+	font-family: Arial;
+	letter-spacing: 1.2px;
+	line-height: 20px;
 }
-.btnn:hover{
-    background: #fff;
-    color: #ff7200;
+.content .cn {
+	width: 160px;
+	height: 40px;
+	background: #ff7200;
+	border: none;
+	margin-bottom: 10px;
+	margin-left: 20px;
+	border-bottom-left-radius: 55px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 55px;
+	border-bottom-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+	font-size: 18px;
+	transition: 0.4s ease;
 }
-.btnn a{
-    text-decoration: none;
-    color: #000000;
-    font-weight: bold;
+.content .cn a {
+	text-decoration: none;
+	color: #fff;
+	transition: 0.3s ease;
 }
-.form .link{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    padding-top: 20px;
-    text-align: center;
+.content .cn a:hover {
+	color: #000000;
 }
-.form .link a{
-    text-decoration: none;
-    color: #ff7200;
+.content span {
+	color: #ff7200;
+	font-size: 30px;
 }
-.liw{
-    padding-top: 15px;
-    padding-bottom: 10px;
-    text-align: center;
+.form {
+	width: 250px;
+	height: 380px;
+	background: linear-gradient(
+		to top,
+		rgba(0, 0, 0, 0.8) 50%,
+		rgba(0, 0, 0, 0.8) 50%
+	);
+	position: absolute;
+	top: 150px;
+	left: 870px;
+	border-radius: 10px;
+	padding: 25px;
+}
+.form h2 {
+	width: 220px;
+	font-family: sans-serif;
+	text-align: center;
+	color: #ff7200;
+	font-size: 18px;
+	background-color: #fff;
+	border-radius: 10px;
+	margin: 2px;
+	padding: 8px;
+}
+.form input {
+	width: 240px;
+	height: 35px;
+	background: transparent;
+	border-bottom: 1px solid #ff7200;
+	border-top: none;
+	border-right: none;
+	border-left: none;
+	color: #fff;
+	font-size: 15px;
+	letter-spacing: 1px;
+	margin-top: 30px;
+	font-family: sans-serif;
+}
+::placeholder {
+	color: #fff;
+	font-family: Arial;
+}
+.btnn {
+	width: 240px;
+	height: 40px;
+	background: #ff7200;
+	border: none;
+	margin-top: 30px;
+	font-size: 18px;
+	border: radius 10px;
+	cursor: pointer;
+	color: #fff;
+	transition: 0.4s ease;
+}
+.btnn:hover {
+	background: #fff;
+	color: #ff7200;
+}
+.btnn a {
+	text-decoration: none;
+	color: #000000;
+	font-weight: bold;
+}
+.form .link {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 17px;
+	padding-top: 20px;
+	text-align: center;
+}
+.form .link a {
+	text-decoration: none;
+	color: #ff7200;
+}
+.liw {
+	padding-top: 15px;
+	padding-bottom: 10px;
+	text-align: center;
 }
 /* Add tags */
-
-
-
